Text no longer overflows to under the header image of a slide.

--- a/_includes/css/slides.css
+++ b/_includes/css/slides.css
@@ -14,13 +14,13 @@
     width: 100%;
     cursor: pointer;
     white-space: nowrap;
-    margin-bottom: -0.8em;
+    overflow: hidden;
+    box-shadow: 0.000em 0.188em 0.188em #999999;
 }
 
 .slide .header img {
     width: 100%;
     background-color: #575757;
-    box-shadow: 0.000em 0.188em 0.188em #999999;
 
     position: relative;
     left: 0;
@@ -42,6 +42,7 @@
     position: relative;
     top: 0; /*default, set in js*/
     width: 0;
+    height: 0;
     display: inline-block;
     overflow: visible;
     z-index: 100;
